Panchang + DMSans (normal/italic)

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,4 +3,5 @@
 @import "params/params-mediaqueries.scss";
 
 @import "base/base-body.scss";
+@import "base/base-fonts.scss";
 @import "base/base-section.scss";
