--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -3,8 +3,8 @@
 =================================== */
 
 :root {
-  --fontstack-main: "Montserrat", "Helvetica Neue", "Helvetica", system-ui,
+  --fontstack-main: "DMSans", "Helvetica Neue", "Helvetica", system-ui,
   sans-serif;
-  --fontstack-alt: "Montserrat", "Helvetica Neue", "Helvetica", system-ui,
+  --fontstack-alt: "DMSans", "Helvetica Neue", "Helvetica", system-ui,
   sans-serif;
 }
