Inital Setup of the sections

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,10 +10,14 @@
   </head>
   <body>
     
-    {% block content %}
+    <div class="horizontalScroll">
 
-    {% endblock %}
-    
+      {% block content %}
+
+      {% endblock %}
+
+    </div>
+
   </body>
 
 
