--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -6,11 +6,14 @@ permalink: /index.html
 
 {% block content %}
 
-    <div class="s-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
-    <div class="s-section__green">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
-    <div class="s-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
-    <div class="s-section__light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
-    <div class="s-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+    <div class="s-section s-section__green">
+        <div class="s-section__number">01</div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+
+    <div class="s-section__light s-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+
+    
+
 
 
 {% endblock %}
