--- a/src/assets/scss/base/_base-body.scss
+++ b/src/assets/scss/base/_base-body.scss
@@ -3,8 +3,26 @@ body {
   color: var(--color-white);
   background-color: var(--color-grey-100);
 
+  overflow-y: hidden;
+
+  margin: 0;
+  
+}
+
+body > .horizontalScroll {
+
+  display: flex;
+  flex-direction: row;
+
   overflow-x: scroll;
   overflow-y: hidden;
+
+  height: 100vh;
+  width: 100%;
+
+  position: relative;
+
+  margin: 0;
   
 }
 
@@ -13,12 +31,12 @@ body {
 //================
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+body  > .horizontalScroll::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-body {
+body  > .horizontalScroll {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
