--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -3,8 +3,75 @@
     display: flex;
     flex-direction: row;
 
-    overflow-x: scroll;
-    overflow-y: hidden;
+    position: relative;
+
+}
+
+.s-section__number {
+
+    font-size: 720px;
+    position: absolute;
+
+}
+
+.s-section::before {
+
+    content: "";
+    opacity: 0;
+
+    height: 100%;
+    aspect-ratio: 1/1;
+
+}
+
+.s-section::after {
+
+    content: "";
+    background-image: url(../img/sectionSplit.svg);
+    background-size: cover;
+
+    z-index: 2;
+    position: absolute;
+    right: 0;
+    
+    transform-origin: 100% 50%;
+    transform: translateX(100%);
+
+    height: 100%;
+    aspect-ratio: 1/1;
+
+}
+
+
+//================
+// Section Colors
+//================
+
+.s-section__green {
+
+    color: var(--color-grey-100);
+    background-color: var(--color-green-300);
+
+}
+
+
+.s-section__green::after {
+
+    filter: invert(35%) sepia(63%) saturate(550%) hue-rotate(111deg) brightness(101%) contrast(98%);
+
+}
+
+.s-section__light {
+
+    color: var(--color-grey-100);
+    background-color: var(--color-white);
+
+
+}
+
+.s-section__light::after {
+
+    filter: invert(90%) sepia(13%) saturate(458%) hue-rotate(317deg) brightness(111%) contrast(102%);
 
 }
 
@@ -21,22 +88,4 @@
 .s-section {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-}
-
-//================
-// Section Colors
-//================
-
-.s-section__green {
-
-    color: var(--color-grey-100);
-    background-color: var(--color-green-300);
-
-}
-
-.s-section__light {
-
-    color: var(--color-grey-100);
-    background-color: var(--color-white);
-
 }
