Horizontal Scrolling, grid Layout and Sections

--- a/src/assets/scss/base/_base-body.scss
+++ b/src/assets/scss/base/_base-body.scss
@@ -1,7 +1,9 @@
 body {
 
-  color: var(--color-white);
+  color: var(--color-green-300);
   background-color: var(--color-grey-100);
+
+  font-family: "DMSans";
 
   overflow-y: hidden;
 
