--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -7,10 +7,23 @@ permalink: /index.html
 {% block content %}
 
     <div class="s-section s-section__green">
-        <div class="s-section__number">01</div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+        <div class="s-section__content">
+            <h1 class="firstsection__title">
+                Ardennes
+            </h1>
+        </div>
+    </div>
 
-    <div class="s-section__light s-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+    <div class="s-section">
+        <div class="s-section__number">
+            <p>01</p>
+        </div>
+        <div class="s-section__content">
+            <h1 class="firstsection__title">
+                Shop
+            </h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+    </div>
 
     
 
