--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -8,3 +8,15 @@
   --fontstack-alt: "DMSans", "Helvetica Neue", "Helvetica", system-ui,
   sans-serif;
 }
+
+h1 {
+
+  font-family: "Panchang";
+  font-weight: 700;
+  font-size: 240px;
+
+  margin: 0;
+
+  grid-area: 1 / 1 / 3 / 1;
+
+}
