Setup for the nav + fix in sections number

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,6 +10,8 @@
   </head>
   <body>
     
+  {% include "../partials/mainnav.njk" %}
+
     <div class="horizontalScroll">
 
       {% block content %}
