--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,4 +6,6 @@
 @import "base/base-fonts.scss";
 @import "base/base-section.scss";
 
+@import "partials/mainnav.scss";
+
 @import "page/index.scss";
