--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -25,8 +25,15 @@ permalink: /index.html
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
     </div>
 
-    
-
-
+        <div class="s-section s-section__green">
+        <div class="s-section__number">
+            <p>02</p>
+        </div>
+        <div class="s-section__content">
+            <h1 class="firstsection__title">
+                Infomations
+            </h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+    </div>
 
 {% endblock %}
