--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -1,7 +1,8 @@
 .mainnav {
 
-    height: 100vh;
-    width: 120px;
+    height: 60px;
+    width: 100vw;
+
     background-color: var(--color-green-300);
 
     color: var(--color-grey-100);
@@ -13,11 +14,12 @@
 
 .mainnav__visible {
 
+    width: 100%;
     height: 100%;
 
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 120px 1fr 276px;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 60px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 
@@ -30,33 +32,84 @@
     align-items: center;
     justify-content: center;
 
-    border: 1px solid var(--color-grey-100);
-    box-sizing: border-box;
-
-}
-
-.mainnav__element > * {
-
-    transform-origin: 50% 50%;
-    transform: rotate(-90deg);  
-
 }
 
 .mainnav__copyright {
 
-
-    grid-area: 3 / 1 / 4 / 2;
+    display: none;
 
 }
 
 .mainnav__logo {
 
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
 
 }
 
 .mainnav__star {
 
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 2 / 2 / 3;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .mainnav {
+
+        height: 100vh;
+        width: 120px;
+    
+    }
+
+    .mainnav__visible {
+
+        height: 100%;
+        width: 120px;
+    
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 120px 1fr 276px;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+    
+    }
+    
+    .mainnav__element {
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    
+        border: 1px solid var(--color-grey-100);
+        box-sizing: border-box;
+    
+    }
+    
+    .mainnav__element > * {
+    
+        transform-origin: 50% 50%;
+        transform: rotate(-90deg);  
+    
+    }
+    
+    .mainnav__copyright {
+    
+    
+        grid-area: 3 / 1 / 4 / 2;
+    
+    }
+    
+    .mainnav__logo {
+    
+        grid-area: 2 / 1 / 3 / 2;
+    
+    }
+    
+    .mainnav__star {
+    
+        grid-area: 1 / 1 / 2 / 2;
+    
+    }
 
 }
