Creation and implementation of the Hidden Nav, responsive too

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="assets/img/Logo_Big.ico">
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script type="module" src="/assets/js/app.bundle.js"></script>
+    <script type="module" src="/assets/js/mainnav.bundle.js"></script>
   </head>
   <body>
     
