--- a/src/_includes/partials/mainnav.njk
+++ b/src/_includes/partials/mainnav.njk
@@ -8,13 +8,27 @@
               </div>
             </div>
             <div class="mainnav__element mainnav__logo">
-              <div class="logo__content">
-                Logo
-              </div>
+                <img src="assets/img/Mate_Logo.svg" alt="">
             </div>
-            <div class="mainnav__element mainnav__star">
-              *
+            <div class="mainnav__element mainnav__star mainnav__button">
+              <img src="assets/img/Mate_Star.svg" alt="">
             </div>
+          </div>
+          <div class="mainnav__hidden">
+            <ul class="hidden__list">
+              <li class="hidden__item hidden__item__selected">
+                <a href="index.html">home</a>
+              </li>
+              <li class="hidden__item">
+                <a href="">collection</a>
+              </li>
+              <li class="hidden__item">
+                <a href="">shop</a>
+              </li>
+              <li class="hidden__item">
+                <a href="">about</a>
+              </li>
+            </ul>
           </div>
         </div>
 
