--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -5,7 +5,7 @@
 :root {
   --fontstack-main: "DMSans", "Helvetica Neue", "Helvetica", system-ui,
   sans-serif;
-  --fontstack-alt: "DMSans", "Helvetica Neue", "Helvetica", system-ui,
+  --fontstack-alt: "Panchang", "Helvetica Neue", "Helvetica", system-ui,
   sans-serif;
 }
 
@@ -18,5 +18,12 @@ h1 {
   margin: 0;
 
   grid-area: 1 / 1 / 3 / 1;
+
+}
+
+a {
+
+  text-decoration: none;
+  color: inherit;
 
 }
