--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -46,22 +46,159 @@
 
 }
 
+.mainnav__logo img {
+
+    height: 30px;
+    width: auto;
+
+
+}
+
 .mainnav__star {
 
     grid-area: 1 / 2 / 2 / 3;
 
+    padding: 12px;
+
 }
+
+.mainnav__button {
+
+    transition: all 0.2s ease;
+
+    img {
+
+        transition: all 0.4s ease;
+
+    }
+
+}
+
+.mainnav__button:hover {
+
+    cursor: pointer;
+    background-color: var(--color-green-400);
+
+    img {
+
+        transform: scale(1.1);
+
+    }
+
+}
+
+.mainnav__hidden {
+
+    height: 100vh;
+    width: 100vw;
+
+    background-color: var(--color-green-300);
+
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    left: 100vw;
+    //left: 120px;
+
+    transition: all 0.2s ease;
+
+}
+
+.hidden__list {
+
+    height: 100%;
+
+    list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    row-gap: 30px;
+
+    margin: 0;
+    margin-block-start: -60px;
+    padding-inline-start: 60px;
+
+}
+
+.hidden__item {
+
+    font-family: var(--fontstack-alt);
+    font-weight: 700;
+    font-size: calc(36 / 16 * 1rem);
+
+    color: var(--color-green-200);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    transition: all 0.2s ease;
+
+}
+
+.hidden__item:hover {
+
+    color: var(--color-green-100);
+
+}
+
+.hidden__item::before {
+
+    content: "";
+
+    width: 0;
+    height: 0;
+
+    background-image: url(../img/Mate_Star_DarkGreen.svg);
+    background-size: cover;
+    aspect-ratio: 1/1;
+
+    display: block;
+
+    margin-inline: 0;
+
+    transition: all 0.2s ease;
+
+}
+
+.hidden__item:hover::before {
+
+    content: "";
+
+    width: 30px;
+    height: 30px;
+
+    background-image: url(../img/Mate_Star_DarkGreen.svg);
+    background-size: cover;
+    aspect-ratio: 1/1;
+
+    display: block;
+
+    margin-inline: 12px;
+
+}
+
+// =========================
+//       SIDE SCROLL
+// =========================
 
 @media all and (min-width: 1024px) {
 
     .mainnav {
 
         height: 100vh;
-        width: 120px;
-    
+        width: auto;
+
+        display: flex;
+        flex-direction: row-reverse;
+
     }
 
     .mainnav__visible {
+
+        background-color: var(--color-green-300);
 
         height: 100%;
         width: 120px;
@@ -109,7 +246,124 @@
     .mainnav__star {
     
         grid-area: 1 / 1 / 2 / 2;
+
+        padding: 24px;
     
+    }
+
+    .mainnav__button {
+
+        transition: all 0.2s ease;
+
+        img {
+
+            transition: all 0.4s ease;
+
+        }
+
+    }
+
+    .mainnav__button:hover {
+
+        cursor: pointer;
+        background-color: var(--color-green-400);
+
+        img {
+
+            transform: scale(1.1);
+
+        }
+
+    }
+
+    .mainnav__hidden {
+
+        height: 100vh;
+        width: calc(100vw - 120px);
+
+        background-color: var(--color-green-300);
+
+        position: absolute;
+        z-index: -1;
+        right: 0;
+        left: -100vw;
+        //left: 120px;
+
+        transition: all 0.2s ease;
+
+    }
+
+    .hidden__list {
+
+        height: 100%;
+
+        list-style: none;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        margin: 0;
+        padding-inline-start: 126px;
+
+    }
+
+    .hidden__item {
+
+        font-family: var(--fontstack-alt);
+        font-weight: 700;
+        font-size: calc(156 / 16 * 1rem);
+
+        color: var(--color-green-200);
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        transition: all 0.2s ease;
+
+    }
+
+    .hidden__item:hover {
+
+        color: var(--color-green-100);
+
+    }
+
+    .hidden__item::before {
+
+        content: "";
+
+        width: 0;
+        height: 0;
+
+        background-image: url(../img/Mate_Star_DarkGreen.svg);
+        background-size: cover;
+        aspect-ratio: 1/1;
+
+        display: block;
+
+        margin-inline: 0;
+
+        transition: all 0.2s ease;
+
+    }
+
+    .hidden__item:hover::before {
+
+        content: "";
+
+        width: 84px;
+        height: 84px;
+
+        background-image: url(../img/Mate_Star_DarkGreen.svg);
+        background-size: cover;
+        aspect-ratio: 1/1;
+
+        display: block;
+
+        margin-inline: 60px;
+
     }
 
 }
