--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
     
   {% include "../partials/mainnav.njk" %}
 
-    <div class="horizontalScroll">
+    <div class="body__content">
 
       {% block content %}
 
