--- a/src/assets/scss/base/_base-body.scss
+++ b/src/assets/scss/base/_base-body.scss
@@ -5,27 +5,37 @@ body {
 
   font-family: "DMSans";
 
-  overflow-y: hidden;
-
   margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
   
 }
 
-body > .horizontalScroll {
+@media all and (min-width: 1024px) {
 
-  display: flex;
-  flex-direction: row;
+  body {
 
-  overflow-x: scroll;
-  overflow-y: hidden;
+    overflow-y: hidden;
 
-  height: 100vh;
-  width: 100%;
+  }
 
-  position: relative;
+  body > .body__content {
 
-  margin: 0;
-  
+    display: flex;
+    flex-direction: row;
+
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    height: 100vh;
+    width: 100%;
+
+    position: relative;
+
+    margin: 0;
+    
+  }
+
 }
 
 //================
@@ -33,7 +43,7 @@ body > .horizontalScroll {
 //================
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body  > .horizontalScroll::-webkit-scrollbar {
+body  > .body__content::-webkit-scrollbar {
   display: none;
 }
 
