--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -9,15 +9,25 @@
   sans-serif;
 }
 
+
 h1 {
 
   font-family: "Panchang";
   font-weight: 700;
-  font-size: 240px;
+  font-size: 42px;
 
   margin: 0;
 
-  grid-area: 1 / 1 / 3 / 1;
+}
+
+@media all and (min-width: 1024px) {
+
+  h1 {
+    font-size: 240px;
+
+    grid-area: 1 / 1 / 3 / 1;
+
+  }
 
 }
 
