--- a/src/assets/scss/base/_base-body.scss
+++ b/src/assets/scss/base/_base-body.scss
@@ -4,12 +4,16 @@ body {
   background-color: var(--color-grey-100);
 
   font-family: "DMSans";
-
   margin: 0;
-  max-width: 100vw;
-  overflow-x: hidden;
-  
+
 }
+
+body > .body__content {
+
+  position: relative;
+  overflow-x: hidden;
+
+ }
 
 @media all and (min-width: 1024px) {
 
