--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -72,6 +72,12 @@
 
 @media all and (min-width: 1024px) {
 
+    .s-section {
+
+        padding: 0;
+
+    }
+
     .s-section::after {
 
         content: "";
