--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -19,7 +19,7 @@ permalink: /index.html
             <p>01</p>
         </div>
         <div class="s-section__content">
-            <h1 class="firstsection__title">
+            <h1 class="section__title">
                 Shop
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
@@ -30,7 +30,7 @@ permalink: /index.html
             <p>02</p>
         </div>
         <div class="s-section__content">
-            <h1 class="firstsection__title">
+            <h1 class="section__title">
                 Infomations
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
