--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -140,7 +140,7 @@
     
 }
 
-h1 {
+.section__title {
 
     font-family: "Panchang";
     font-weight: 700;
@@ -159,7 +159,7 @@ h1 {
   
   @media all and (min-width: 1024px) {
   
-    h1 {
+    .section__title {
       font-size: 240px;
   
       grid-area: 1 / 1 / 3 / 1;
