--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -10,11 +10,19 @@
 
 .mainnav__visible {
 
+    width: 100%;
+
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 60px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+
+    background-color: var(--color-green-300);
+
+    position: fixed;
+    top: 0;
+    z-index: 10;
 
 }
 
