Testing of parallax effect on side scroll

--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -22,7 +22,11 @@ permalink: /index.html
             <h1 class="section__title">
                 Shop
             </h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.
+            <div class="parallax__container">
+                <div class="parallax__animation__left">PARALLAX</div>
+            </div>
+        </div>
     </div>
 
         <div class="s-section s-section__green">
