--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -155,14 +155,22 @@
     text-align: center;
    
   
-  }
+}
   
   @media all and (min-width: 1024px) {
   
     .section__title {
-      font-size: 240px;
+
+        font-family: "Panchang";
+        font-weight: 700;
+        font-size: 240px;
+        text-align: left;
+
+        color: var(--color-black);
+        
+        margin: 0;
   
-      grid-area: 1 / 1 / 3 / 1;
+        grid-area: 1 / 1 / 3 / 1;
   
     }
   
