--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -1,16 +1,19 @@
 .mainnav {
 
     height: 60px;
+    width: 100%;
 
     background-color: var(--color-green-300);
 
     color: var(--color-grey-100);
 
+    
+    position: fixed;
+    z-index: 5;
+
 }
 
 .mainnav__visible {
-
-    width: 100%;
 
     display: grid;
     grid-template-rows: 1fr;
@@ -20,9 +23,6 @@
 
     background-color: var(--color-green-300);
 
-    position: fixed;
-    top: 0;
-    z-index: 10;
 
 }
 
@@ -201,14 +201,14 @@
         display: flex;
         flex-direction: row-reverse;
 
-        position: fixed;
-        z-index: 5;
 
     }
 
     .mainnav__visible {
 
         background-color: var(--color-green-300);
+
+        position: relative;
 
         height: 100%;
         width: 120px;
