--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -378,3 +378,55 @@
     }
 
 }
+
+// =========================
+//       Active
+// =========================
+
+.mainnav__active {
+
+    color: var(--color-green-100);
+
+}
+.mainnav__active::before {
+
+    content: "";
+
+    width: 30px;
+    height: 30px;
+
+    background-image: url(../img/Mate_Star_DarkGreen.svg);
+    background-size: cover;
+    aspect-ratio: 1/1;
+
+    display: block;
+
+    margin-inline: 12px;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .mainnav__active {
+
+        color: var(--color-green-100);
+
+    }
+    .mainnav__active::before {
+
+        content: "";
+
+        width: 84px;
+        height: 84px;
+
+        background-image: url(../img/Mate_Star_DarkGreen.svg);
+        background-size: cover;
+        aspect-ratio: 1/1;
+
+        display: block;
+
+        margin-inline: 60px;
+
+    }
+
+}
