Fix on mobile titles, and setup of credits

--- a/src/_includes/partials/mainnav.njk
+++ b/src/_includes/partials/mainnav.njk
@@ -29,6 +29,20 @@
                 <a href="about.html">about</a>
               </li>
             </ul>
+            <div class="hidden__credits">
+              <ul class="credits__list">
+                <li class="credits__item">a</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+                <li class="credits__item">b</li>
+              </ul>
+            </div>
           </div>
         </div>
 
