--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -8,7 +8,7 @@ permalink: /index.html
 
     <div class="s-section s-section__green">
         <div class="s-section__content">
-            <h1 class="firstsection__title">
+            <h1 class="section__title">
                 Ardennes
             </h1>
         </div>
