--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -8,7 +8,7 @@ permalink: /index.html
 
     <div class="s-section s-section__green">
         <div class="s-section__content">
-            <h1 class="section__title">
+            <h1 class="s-section__title">
                 Ardennes
             </h1>
         </div>
@@ -19,7 +19,7 @@ permalink: /index.html
             <p>01</p>
         </div>
         <div class="s-section__content">
-            <h1 class="section__title">
+            <h1 class="s-section__title">
                 Shop
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.
@@ -34,7 +34,7 @@ permalink: /index.html
             <p>02</p>
         </div>
         <div class="s-section__content">
-            <h1 class="section__title">
+            <h1 class="s-section__title">
                 Infomations
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.</div>
