--- a/src/assets/scss/anims/parallax.scss
+++ b/src/assets/scss/anims/parallax.scss
@@ -13,8 +13,6 @@
     animation-duration: 1ms; /* Firefox requires this to apply the animation */
 
     position: absolute;
-
-    background-color: aqua;
 }
 
 @keyframes appear {
@@ -26,3 +24,46 @@
         left: 0px;
     }
 }
+
+.s-section__number {
+
+    animation-timeline: view(inline);
+
+    animation-name: appearNumber;
+    animation-range: 20% 180%;
+    animation-fill-mode: both;
+    animation-duration: 1ms; /* Firefox requires this to apply the animation */
+
+}
+
+@keyframes appearNumber {
+    from {
+        margin-inline-start: -420px;
+    }
+
+    to {
+        margin-inline-start: -900px;
+    }
+}
+
+.s-section__title {
+
+    animation-timeline: view(inline);
+
+    animation-name: appearTitle;
+    animation-range: 0% 20%;
+    animation-fill-mode: both;
+    animation-duration: 1ms; /* Firefox requires this to apply the animation */
+
+}
+
+@keyframes appearTitle {
+    from {
+        margin-block-start: -40px;
+    }
+
+    to {
+        margin-block-start: 0px;
+    }
+}
+
