--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,7 @@
+@import "animations/_animation-slide.scss";
+
+@import "objects/objects-fluidimage.scss";
+
 @import "params/params-colors.scss";
 @import "params/params-typography.scss";
 @import "params/params-mediaqueries.scss";
