--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -20,6 +20,19 @@ h1 {
 
 }
 
+h2 {
+
+  font-family: "DMSans";
+  color: var(--color-text-light);
+  font-weight: 700;
+  font-size: 42px;
+
+  margin: 0;
+
+}
+
+
+
 @media all and (min-width: 1024px) {
 
   h1 {
@@ -28,6 +41,12 @@ h1 {
     grid-area: 1 / 1 / 3 / 1;
 
   }
+
+  h2 {
+    font-size: 60px;
+
+  }
+
 
 }
 
