--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -21,6 +21,7 @@
     flex-direction: column;
     align-items: center;
 
+    margin: 0;
     margin-block-end: -4rem;
     
 }
@@ -158,8 +159,8 @@
   
 }
   
-  @media all and (min-width: 1024px) {
-  
+@media all and (min-width: 1024px) {
+
     .s-section__title {
 
         font-family: "Panchang";
@@ -170,9 +171,9 @@
         color: var(--color-black);
         
         margin: 0;
-  
+
         grid-area: 1 / 1 / 3 / 1;
-  
+
     }
-  
-  }
+
+}
