--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -146,9 +146,8 @@
         overflow: hidden;
 
 
-        margin-inline-start: -400px;
-
         margin: 0;
+        margin-inline-end: -360px;
 
         
     }
