--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -6,8 +6,7 @@ permalink: /index.html
 
 {% block content %}
 
-    <div class="s-section s-section">
-        
+    <div class="s-section">
         <div class="s-section__content">
             <h1 class="firstsection__title">
                 Mate
@@ -34,12 +33,12 @@ permalink: /index.html
                 </div>
             </div>
         </div>
-        <div class="s-section__content cardsection">
+        <div class="s-section__content cardsection slideFromTop">
             <h2 class="cardsection__title">Why Ardennes?</h2>
             <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
             <div class="cardsection__img"><img src="../../assets/img/ardennesMountains.JPG" alt="ardennesMountains" class="o-fluidimg"></div>
         </div>
-        <div class="s-section__content cardsection reverse">
+        <div class="s-section__content cardsection reverse slideFromBottom">
             <h2 class="cardsection__title">We focus on the Quality</h2>
             <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
             <div class="cardsection__img"><img src="../../assets/img/ardennesQuality.JPG" alt="ardennesMountains" class="o-fluidimg"></div>
@@ -54,7 +53,7 @@ permalink: /index.html
 
     <div class="s-section">
         <div class="s-section__number">
-            <p>01</p>
+            <p>02</p>
         </div>
         <div class="s-section__content">
             <h1 class="s-section__title">
@@ -62,34 +61,30 @@ permalink: /index.html
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos. <br> <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci quod illum aliquam quos voluptate, voluptas delectus nobis non, dolores officiis consequuntur obcaecati veritatis assumenda, voluptatibus architecto incidunt. Sequi, aliquid. <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptatum aperiam sint dolore. Soluta dolore eaque dolores saepe rerum, accusamus quaerat perspiciatis delectus quidem suscipit nulla omnis, ex beatae. Pariatur. <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo facere ipsam consequuntur veniam repudiandae et commodi voluptates quam vero! Quas assumenda ullam impedit velit sint minus autem, doloremque repellat sit! <br> <br>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum incidunt ab aperiam odit harum aut odio facere labore? Numquam modi sunt ratione aut quisquam consectetur voluptates aliquid alias inventore cupiditate. <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nisi illum aliquam odio impedit. Consequatur expedita vitae maxime dolorum esse commodi, molestias quaerat unde dignissimos facere animi reiciendis minus cumque? <br> <br>
             <div class="parallax__container">
                 <div class="parallax__animation__left">PARALLAX</div>
             </div>
         </div>
     </div>
 
-        <div class="s-section s-section__green">
-            <div class="s-section__number">
-                <p>02</p>
-            </div>
-            <div class="s-section__content">
-
+    <div class="s-section s-section__green">
+        <div class="s-section__number">
+            <p>03</p>
+        </div>
+        <div class="s-section__content">
             <h1 class="s-section__title">
                 Infomations
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.
         </div>
-        <div class="s-section s-section__green">
-            <div class="s-section__number">
-                <p>03</p>
-            </div>
-            <div class="s-section__content">
+    </div>
+    <div class="s-section">
+        <div class="s-section__number">
+            <p>04</p>
+        </div>
+        <div class="s-section__content">
             <h1 class="s-section__title">
-                Infomations
+                More
             </h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.
         </div>
