--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,5 +11,6 @@
 @import "partials/mainnav.scss";
 
 @import "page/index.scss";
+@import "page/shop.scss";
 
 @import "animations/_animation-slide.scss";
