--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -29,7 +29,7 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                 </ul>
-                <ul class="shop__list">
+                <ul class="shop__list invert">
                     <li class="shop__item">
                         <div class="shop__card"></div>
                     </li>
@@ -63,7 +63,7 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                 </ul>
-                <ul class="shop__list">
+                <ul class="shop__list invert">
                     <li class="shop__item">
                         <div class="shop__card"></div>
                     </li>
@@ -97,7 +97,7 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                 </ul>
-                <ul class="shop__list">
+                <ul class="shop__list invert">
                     <li class="shop__item">
                         <div class="shop__card"></div>
                     </li>
@@ -131,7 +131,7 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                 </ul>
-                <ul class="shop__list">
+                <ul class="shop__list invert">
                     <li class="shop__item">
                         <div class="shop__card"></div>
                     </li>
