--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -20,7 +20,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -37,7 +47,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -54,7 +74,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -71,7 +101,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -88,7 +128,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -105,7 +155,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -122,7 +182,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
@@ -139,7 +209,17 @@ permalink: /shop.html
                         <div class="shop__card"></div>
                     </li>
                     <li class="shop__item">
-                        <div class="shop__card middle"></div>
+                        <div class="shop__card middle">
+                            <p class="shop__title">Hoodie</p>
+                            <ul class="shop__sizes">
+                                <li class="shop__size">XS</li>
+                                <li class="shop__size">S</li>
+                                <li class="shop__size">M</li>
+                                <li class="shop__size">L</li>
+                                <li class="shop__size">XL</li>
+                                <li class="shop__size">XXL</li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="shop__item">
                         <div class="shop__card"></div>
